[fix] auto redirect from .org to .camp

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <script>
+    // auto redirect
+    if (location.origin.split('.').pop() == 'org') location = 'https://sitcon.camp/2019'
+  </script>
+  <style>
+    body{
+      background-color: black;
+    }
+  </style>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
