--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,21 @@
   <meta name="msapplication-TileImage"
     content="./favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#000000">
+
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-NKHHNVV');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKHHNVV"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <noscript>
     <strong>2019 年度，SITCON 夏令營將於海洋大學舉辦，以「浸身資訊流，征服開源星」為主軸，帶領各位一同進入開源宇宙。承接開源城的概念，今年的開源宇宙將會有介紹社群精神、開源文化、資訊安全等議題的廣度課程，並透過社群闖關讓學員更加了解各個社群的理念、運作，也會有從基礎 Python 程式語言到做出自己的聊天機器人的實作課程。開源宇宙也將更進一步把故事和營隊整合，配合豐富的課程、座談會及社群闖關，營造完整的體驗，絕對能讓學員擁有截然不同的營隊體驗。</strong>
   </noscript>
