--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,22 @@
     content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>SITCON 夏令營 2019</title>
+  <meta name="description" content="2019 年度，SITCON 夏令營將於海洋大學舉辦，以「浸身資訊流，征服開源星」為主軸，帶領各位一同進入開源宇宙。承接開源城的概念，今年的開源宇宙將會有介紹社群精神、開源文化、資訊安全等議題的廣度課程，並透過社群闖關讓學員更加了解各個社群的理念、運作，也會有從基礎 Python 程式語言到做出自己的聊天機器人的實作課程。開源宇宙也將更進一步把故事和營隊整合，配合豐富的課程、座談會及社群闖關，營造完整的體驗，絕對能讓學員擁有截然不同的營隊體驗。">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta property="og:title" content="SITCON 夏令營 2019">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://sitcon.camp/2019/">
+  <meta property="og:image" content="http://sitcon.camp/2019/og.png">
+  <meta property="og:site_name" content="SITCON 夏令營 2019">
+  <meta property="og:description" content="2019 年度，SITCON 夏令營將於海洋大學舉辦，以「浸身資訊流，征服開源星」為主軸，帶領各位一同進入開源宇宙。承接開源城的概念，今年的開源宇宙將會有介紹社群精神、開源文化、資訊安全等議題的廣度課程，並透過社群闖關讓學員更加了解各個社群的理念、運作，也會有從基礎 Python 程式語言到做出自己的聊天機器人的實作課程。開源宇宙也將更進一步把故事和營隊整合，配合豐富的課程、座談會及社群闖關，營造完整的體驗，絕對能讓學員擁有截然不同的營隊體驗。">
+
+  <meta property="twitter:title" content="SITCON 夏令營">
+  <meta property="twitter:description" content="2019 年度，SITCON 夏令營將於海洋大學舉辦，以「浸身資訊流，征服開源星」為主軸，帶領各位一同進入開源宇宙。承接開源城的概念，今年的開源宇宙將會有介紹社群精神、開源文化、資訊安全等議題的廣度課程，並透過社群闖關讓學員更加了解各個社群的理念、運作，也會有從基礎 Python 程式語言到做出自己的聊天機器人的實作課程。開源宇宙也將更進一步把故事和營隊整合，配合豐富的課程、座談會及社群闖關，營造完整的體驗，絕對能讓學員擁有截然不同的營隊體驗。">
+  <meta property="twitter:image:src" content="http://sitcon.camp/2019/logo.png">
+  <meta property="twitter:image:width" content="842">
+  <meta property="twitter:image:height" content="595">
+
   <link rel="apple-touch-icon" sizes="57x57"
     href="./favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60"
